fix: drop down menu, underline red, responsiveness, overflow of menu

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 .navbar {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     background-color: #333;
+    width: 100vw;
 }
 
 .navbar-custom .nav-link {
@@ -50,6 +51,7 @@ body {
 .nav-link {
     font-weight: 500;
     position: relative;
+    display: inline-block;
 }
 
 .nav-link::after {
@@ -58,14 +60,18 @@ body {
     width: 0;
     height: 2px;
     bottom: 0;
-    left: 50%;
+    left: 0;
     background-color: var(--primary-color);
-    transition: all 0.3s ease;
+    transition: width 0.3s ease;
 }
 
 .nav-link:hover::after {
     width: 100%;
-    left: 0;
+}
+
+.navbar-collapse {
+    gap: 2rem;
+    align-items: center;
 }
 
 .btn-primary {
@@ -127,14 +133,13 @@ body {
     left: 40px;
     color: var(--white);
     /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); */
-    z-index: 10;
+    z-index: 2;
 }
 
 .slide-content h2 {
     font-family: "Poppins", sans-serif;
     font-size: 4rem;
     margin-bottom: 0.5rem;
-    z-index: 10;
 }
 
 .slide-content h2 span { 
@@ -313,7 +318,54 @@ body {
     color: var(--white);
 }
 
+
+.map {
+    max-width: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div .map-flex {
+    width: auto;
+}
+
+div .map-container {
+    max-width: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    gap: 156px;
+
+}
+
 /* Responsividade */
+@media (max-width: 986px) { 
+    .btn-primary {
+        margin-top: 1rem;
+    }
+    
+    .map {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        gap: 32px;
+
+
+    }
+ div .map-container {
+        flex-direction: column;
+        gap: 96px;
+
+
+    }
+    /* div .map-flex {
+        width: 100%;
+    } */
+    
+}
 @media (max-width: 768px) {
     #contato .section-title {
         font-size: 28px;
@@ -329,7 +381,9 @@ body {
     }
 
     #contato iframe {
-        height: 250px; /* Reduz o tamanho do mapa em telas menores */
+        max-width: 100%;
+        width: 100vw;
+        /* height: 200px; Reduz o tamanho do mapa em telas menores */
     }
 
     #contato .contact-info a {
